Revert "+ Added TimeInputFormat setting to Timers module to be able to specify time format"
This reverts commit 1a57222b8cf45771b5c7a87f9522187ee29d85b4.

--- a/ThunderED/Templates/timersMain.html
+++ b/ThunderED/Templates/timersMain.html
@@ -57,8 +57,7 @@
                 });
             $(function () {
                 $('#datetimepicker1').datetimepicker({
-                    locale: '{locale}',
-                    format: '{dateformat}'
+                    locale: '{locale}'
                 });
             });
             $('[data-toggle=confirmation]').confirmation({
